experiment-security-groups.json
{
    "SecurityGroups": [
        {
            "Description": "EKS cluster security group.",
            "GroupName": "sap-nate20200127181526724700000002",
            "IpPermissions": [
                {
                    "FromPort": 443,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "172.31.0.0/16",
                            "Description": "Allow access to the control plane endpoint from the internal network range"
                        },
                        {
                            "CidrIp": "172.20.96.0/22",
                            "Description": "Allow access to the control plane endpoint from the internal network range"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 443,
                    "UserIdGroupPairs": [
                        {
                            "Description": "Allow pods to communicate with the EKS cluster API.",
                            "GroupId": "sg-0f492e4f13ba63751",
                            "UserId": "081033439721"
                        }
                    ]
                }
            ],
            "OwnerId": "081033439721",
            "GroupId": "sg-031a732460eafdbc6",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0",
                            "Description": "Allow cluster egress access to the Internet."
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "Tags": [
                {
                    "Key": "Service",
                    "Value": "SAP"
                },
                {
                    "Key": "Env",
                    "Value": "nate"
                },
                {
                    "Key": "Name",
                    "Value": "sap-nate-eks_cluster_sg"
                },
                {
                    "Key": "Role",
                    "Value": "kubernetes cluster - nate"
                }
            ],
            "VpcId": "vpc-67fb3a1f"
        },
        {
            "Description": "Security group for Kubernetes ELB a1ba2ab68415011ea8042063ea680331 (kube-system/nginx-ingress-internal-controller)",
            "GroupName": "k8s-elb-a1ba2ab68415011ea8042063ea680331",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "172.16.0.0/12"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 3,
                    "IpProtocol": "icmp",
                    "IpRanges": [
                        {
                            "CidrIp": "172.16.0.0/12"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 4,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 443,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "172.16.0.0/12"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 443,
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "081033439721",
            "GroupId": "sg-05006dde60aaca8fd",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "Tags": [
                {
                    "Key": "kubernetes.io/cluster/sap-nate",
                    "Value": "owned"
                }
            ],
            "VpcId": "vpc-67fb3a1f"
        },
        {
            "Description": "Amazon WorkSpaces Security Group",
            "GroupName": "d-9267185238_workspacesMembers",
            "IpPermissions": [],
            "OwnerId": "081033439721",
            "GroupId": "sg-05cf08ecc16cfb620",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "Tags": [
                {
                    "Key": "Created by Amazon WorkSpaces",
                    "Value": "Amazon WorkSpaces"
                }
            ],
            "VpcId": "vpc-0b053dfe4812e4205"
        },
        {
            "Description": "EKS created security group applied to ENI that is attached to EKS Control Plane master nodes, as well as any managed workloads.",
            "GroupName": "eks-cluster-sg-sap-nate-1999634031",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-06379e19589f0b081",
                            "UserId": "081033439721"
                        }
                    ]
                }
            ],
            "OwnerId": "081033439721",
            "GroupId": "sg-06379e19589f0b081",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "Tags": [
                {
                    "Key": "kubernetes.io/cluster/sap-nate",
                    "Value": "owned"
                },
                {
                    "Key": "Name",
                    "Value": "eks-cluster-sg-sap-nate-1999634031"
                }
            ],
            "VpcId": "vpc-67fb3a1f"
        },
        {
            "Description": "Security group for Kubernetes ELB a1a4d7908415011ea8042063ea680331 (kube-system/nginx-ingress-external-controller)",
            "GroupName": "k8s-elb-a1a4d7908415011ea8042063ea680331",
            "IpPermissions": [
                {
                    "FromPort": 80,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 80,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 3,
                    "IpProtocol": "icmp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 4,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 443,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 443,
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "081033439721",
            "GroupId": "sg-0708a0601e255eff9",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "Tags": [
                {
                    "Key": "kubernetes.io/cluster/sap-nate",
                    "Value": "owned"
                }
            ],
            "VpcId": "vpc-67fb3a1f"
        },
        {
            "Description": "AWS created security group for d-9267185238 directory controllers",
            "GroupName": "d-9267185238_controllers",
            "IpPermissions": [
                {
                    "FromPort": 445,
                    "IpProtocol": "udp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 445,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 138,
                    "IpProtocol": "udp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 138,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 464,
                    "IpProtocol": "udp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 464,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 464,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 464,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 389,
                    "IpProtocol": "udp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 389,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 53,
                    "IpProtocol": "udp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 53,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 389,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 389,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 123,
                    "IpProtocol": "udp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 123,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 445,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 445,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": -1,
                    "IpProtocol": "icmp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": -1,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 3268,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 3269,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 1024,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 65535,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 88,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 88,
                    "UserIdGroupPairs": []
                },
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-07b94387a8813220d",
                            "UserId": "081033439721"
                        }
                    ]
                },
                {
                    "FromPort": 135,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 135,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 636,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 636,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 53,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 53,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 88,
                    "IpProtocol": "udp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 88,
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "081033439721",
            "GroupId": "sg-07b94387a8813220d",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-07b94387a8813220d",
                            "UserId": "081033439721"
                        }
                    ]
                }
            ],
            "VpcId": "vpc-0b053dfe4812e4205"
        },
        {
            "Description": "default VPC security group",
            "GroupName": "default",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-0eb533827b9a10ee3",
                            "UserId": "081033439721"
                        }
                    ]
                }
            ],
            "OwnerId": "081033439721",
            "GroupId": "sg-0eb533827b9a10ee3",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "VpcId": "vpc-0b053dfe4812e4205"
        },
        {
            "Description": "Security group for all nodes in the cluster.",
            "GroupName": "sap-nate20200127182624918300000006",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-05006dde60aaca8fd",
                            "UserId": "081033439721"
                        },
                        {
                            "GroupId": "sg-0708a0601e255eff9",
                            "UserId": "081033439721"
                        },
                        {
                            "Description": "Allow node to communicate with each other.",
                            "GroupId": "sg-0f492e4f13ba63751",
                            "UserId": "081033439721"
                        }
                    ]
                },
                {
                    "FromPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "172.31.0.0/16",
                            "Description": "Allow ssh into nodes from the internal network range"
                        },
                        {
                            "CidrIp": "172.20.96.0/22",
                            "Description": "Allow ssh into nodes from the internal network range"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 22,
                    "UserIdGroupPairs": []
                },
                {
                    "FromPort": 1025,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 65535,
                    "UserIdGroupPairs": [
                        {
                            "Description": "Allow workers pods to receive communication from the cluster control plane.",
                            "GroupId": "sg-031a732460eafdbc6",
                            "UserId": "081033439721"
                        }
                    ]
                },
                {
                    "FromPort": 443,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "ToPort": 443,
                    "UserIdGroupPairs": [
                        {
                            "Description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
                            "GroupId": "sg-031a732460eafdbc6",
                            "UserId": "081033439721"
                        }
                    ]
                }
            ],
            "OwnerId": "081033439721",
            "GroupId": "sg-0f492e4f13ba63751",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0",
                            "Description": "Allow nodes all egress to the Internet."
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "sap-nate-eks_worker_sg"
                },
                {
                    "Key": "kubernetes.io/cluster/sap-nate",
                    "Value": "owned"
                },
                {
                    "Key": "Env",
                    "Value": "nate"
                },
                {
                    "Key": "Role",
                    "Value": "kubernetes cluster - nate"
                },
                {
                    "Key": "Service",
                    "Value": "SAP"
                }
            ],
            "VpcId": "vpc-67fb3a1f"
        },
        {
            "Description": "default VPC security group",
            "GroupName": "default",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupId": "sg-ea475f99",
                            "UserId": "081033439721"
                        }
                    ]
                }
            ],
            "OwnerId": "081033439721",
            "GroupId": "sg-ea475f99",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": [],
                    "UserIdGroupPairs": []
                }
            ],
            "Tags": [
                {
                    "Key": "Env",
                    "Value": "dev"
                },
                {
                    "Key": "Service",
                    "Value": "aws-default"
                }
            ],
            "VpcId": "vpc-67fb3a1f"
        }
    ]
}
